footer correction on smaller screen

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -45,6 +45,7 @@
 
 .subscribe {
   display: flex;
+  flex-direction: column;
   gap: 8px;
   margin-top: 10px;
 }
@@ -55,7 +56,7 @@
   font-family: "DM Sans", sans-serif;
   border: 1px solid #e6c1a9;
   width: 120px;
-  padding: 6px 10px;
+  padding: 6px 12px;
   font-size: 12px;
 }
 
@@ -64,7 +65,8 @@
   border: none;
   background-color: #934713;
   color: #fff;
-  padding: 6px 14px;
+  width: 80px;
+  padding: 6px 10px;
   font-size: 12px;
   cursor: pointer;
 }
@@ -97,6 +99,9 @@
 
   .companyinfo p {
     font-size: 14px;
+  }
+  .subscribe {
+    flex-direction: row;
   }
 
   .subscribe input {
